Includes submission instructions.

--- a/index.html
+++ b/index.html
@@ -1,64 +1,81 @@
 <!DOCTYPE html>
 <html>
+
 <head>
-    <title>Getting Started with Replit</title>
+  <title>Getting Started with Replit</title>
 </head>
+
 <body>
-    <h1>Welcome to Replit</h1>
-    <p>
-        This is a simple guide to help you get started with Replit, an online coding platform.
-    </p>
+  <h1>Welcome to Replit</h1>
+  <p>
+    This is a simple guide to help you get started with Replit, an online coding platform.
+  </p>
 
 
-    <!-- We'll complete 1 and 2 together! -->
+  <!-- We'll complete 1 and 2 together! -->
 
-    <!-- 1. IDE Layout -->
-    <!-- The left side contains the File Explorer where you can see your project files. -->
-    <!-- The center area is the Code Editor where you'll write your code. -->
-    <!-- The right side is the Console/Output where you'll see the results of your code execution. -->
-    <!-- The top bar contains buttons for running your code, creating new files, and more. -->
+  <!-- 1. IDE Layout -->
+  <!-- The left side contains the File Explorer where you can see your project files. -->
+  <!-- The center area is the Code Editor where you'll write your code. -->
+  <!-- The right side is the Console/Output where you'll see the results of your code execution. -->
+  <!-- The top bar contains buttons for running your code, creating new files, and more. -->
 
-    <!-- 2. Code Editing -->
-    <!-- In the Code Editor, you can start writing HTML, CSS, and JavaScript code. -->
-    <!-- Try changing the text below to "Hello, Earthlings!": -->
-    <p>Hello, World!</p>
-
-
-
-    <!-- Go through steps 3-7 by yourself or with a partner. -->
-
-    <!-- 3. Running Code -->
-    <!-- To run your code, click the "Run" button in the top bar or use the "Ctrl + Enter" shortcut. -->
-    <!-- The output will appear in the Console/Output section below your code. -->
-
-    <!-- 4. Console -->
-    <!-- Below is a script that runs JavaScript. -->
-    <!-- Check out the console to see if this message is there! -->
-    <!-- Find the wrench 🔧 icon and click that to see. -->
-    <!-- Try changing the message! -->
-    <script>
-        console.log("Hello from the Console!");
-    </script>
-
-    <!-- 5. Creating Files -->
-    <!-- In the File Explorer, you can create new files or delete existing ones. -->
-    <!-- Right-click on the left side and select "New File" to create a new file. -->
-    <!-- Name it new-file.html -->
+  <!-- 2. Code Editing -->
+  <!-- In the Code Editor, you can start writing HTML, CSS, and JavaScript code. -->
+  <!-- Try changing the text below to "Hello, Earthlings!": -->
+  <p>Hello, World!</p>
 
 
 
-    <!-- 6. Deleting Files -->
-    <!-- Right-click on the delete-this.html file and select "Delete" to remove it. -->
+  <!-- Go through steps 3-7 by yourself or with a partner. -->
+
+  <!-- 3. Running Code -->
+  <!-- To run your code, click the "Run" button in the top bar or use the "Ctrl + Enter" shortcut. -->
+  <!-- The output will appear in the Console/Output section below your code. -->
+
+  <!-- 4. Console -->
+  <!-- Below is a script that runs JavaScript. -->
+  <!-- Check out the console to see if this message is there! -->
+  <!-- Find the wrench 🔧 icon and click that to see. -->
+  <!-- Try changing the message! -->
+  <script>
+    console.log("Hello from the Console!");
+  </script>
+
+  <!-- 5. Creating Files -->
+  <!-- In the File Explorer, you can create new files or delete existing ones. -->
+  <!-- Right-click on the left side and select "New File" to create a new file. -->
+  <!-- Name it new-file.html -->
 
 
 
-    <!-- 7. Saving and Closing a Project -->
-    <!-- Your project autosaves, but you can also manually save your changes by clicking the "Save" button in the top bar. -->
-    <!-- To close your project, click the "Close" button in the top-left corner. -->
+  <!-- 6. Deleting Files -->
+  <!-- Right-click on the delete-this.html file and select "Delete" to remove it. -->
 
-    <h2>Happy Coding!</h2>
-    <p>
-        You've learned the basics of using Replit! Feel free to explore more and experiment with different code snippets.
-    </p>
+
+
+  <!-- 7. Saving and Closing a Project -->
+  <!-- Your project autosaves, but you can also manually save your changes by clicking the "Save" button in the top bar. -->
+  <!-- To close your project, click the "Close" button in the top-left corner. -->
+
+  <!-- 8. Bonus: HTML -->
+  <!-- Locate the bonus.html file! -->
+  <!-- Use HTML to create an acrostic poem with youe name -->
+
+  <!-- 9. Submit Your Assignmet  -->
+  <!-- Click Run one last time to ensure your code is saved. -->
+  <!-- Click the Git option from the Tools Menu -->
+  <!-- Write a commit message - short and to the point - and then click stage and commit all changes. -->
+  <!-- Push commit. Go to GitHub, check all is good and copy the repo url>
+    <!-- Submit your assignment using this link:https://docs.google.com/forms/d/e/1FAIpQLSfkNXYfWO3YfEwB0vy-EONJkNFC1IJfhQ18NWZGDSy2-30geA/viewform   -->
+
+
+
+
+  <h2>Happy Coding!</h2>
+  <p>
+    You've learned the basics of using Replit! Feel free to explore more and experiment with different code snippets.
+  </p>
 </body>
+
 </html>
