this is so well made, cannot believe i made all this

--- a/bonus.html
+++ b/bonus.html
@@ -1,34 +1,39 @@
 <!DOCTYPE html>
 <html>
-    <head>
-        <title>Acrostic Poem: Coding</title>
-    </head>
-    <body>
-        <h1>Acrostic Poem: Coding</h1>
 
-        <!-- Example -->
-        <h2>Coding</h2>
-        <p>
-            C - Creative<br>
-            O - Optimization<br>
-            D - Development<br>
-            I - Innovation<br>
-            N - Networking<br>
-            G - Growth<br>
-        </p>
+<head>
+  <title>Acrostic Poem: Coding</title>
+</head>
 
-        <!-- Try this out with your own name. -->
-        <!-- It's okay to make mistakes! -->
-        <!-- This is a time to explore and see what's possible.-->
+<body>
+  <h1>Acrostic Poem: Coding</h1>
 
-        <h2>Your Name</h2>
-        <p>
-            N - [ ]<br>
-            A - [ ]<br>
-            M - [ ]<br>
-            E - [ ]<br>
-        </p>
+  <!-- Example -->
+  <h2>Coding</h2>
+  <p>
+    C - Creative<br>
+    O - Optimization<br>
+    D - Development<br>
+    I - Innovation<br>
+    N - Networking<br>
+    G - Growth<br>
+  </p>
+
+  <!-- Try this out with your own name. -->
+  <!-- It's okay to make mistakes! -->
+  <!-- This is a time to explore and see what's possible.-->
+
+  <h2>Itzael Huerta</h2>
+  <p>
+    I - [Intricate ]<br>
+    T - [Tumultuous ]<br>
+    Z - [Zealous ]<br>
+    A - [Allegiant ]<br>
+    E - [Endearing ]<br>
+    L - [Liberated ]<br>
+  </p>
 
 
-    </body>
+</body>
+
 </html>
