--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
   <!-- 2. Code Editing -->
   <!-- In the Code Editor, you can start writing HTML, CSS, and JavaScript code. -->
   <!-- Try changing the text below to "Hello, Earthlings!": -->
-  <p>Hello, World!</p>
+  <p>Hello, Earthlings!</p>
 
 
 
@@ -39,7 +39,7 @@
   <!-- Find the wrench 🔧 icon and click that to see. -->
   <!-- Try changing the message! -->
   <script>
-    console.log("Hello from the Console!");
+    console.log("yurrrr");
   </script>
 
   <!-- 5. Creating Files -->
@@ -61,7 +61,40 @@
   <!-- 8. Bonus: HTML -->
   <!-- Locate the bonus.html file! -->
   <!-- Use HTML to create an acrostic poem with youe name -->
+  <head>
+    <title>Acrostic Poem: Coding</title>
+  </head>
 
+  <body>
+    <h1>Acrostic Poem: Coding</h1>
+
+    <!-- Example -->
+    <h2>Coding</h2>
+    <p>
+      C - Creative<br>
+      O - Optimization<br>
+      D - Development<br>
+      I - Innovation<br>
+      N - Networking<br>
+      G - Growth<br>
+    </p>
+
+    <!-- Try this out with your own name. -->
+    <!-- It's okay to make mistakes! -->
+    <!-- This is a time to explore and see what's possible.-->
+
+    <h2>Itzael Huerta</h2>
+    <p>
+      I - [Intricate ]<br>
+      T - [Tumultuous ]<br>
+      Z - [Zealous ]<br>
+      A - [Allegiant ]<br>
+      E - [Endearing ]<br>
+      L - [Liberated ]<br>
+    </p>
+
+
+  </body>
   <!-- 9. Submit Your Assignmet  -->
   <!-- Click Run one last time to ensure your code is saved. -->
   <!-- Click the Git option from the Tools Menu -->
